--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -298,6 +298,8 @@ jobs:
           submodules: recursive
       - name: Install lcov
         run: sudo apt-get install -y build-essential debhelper fakeroot libjsoncpp-dev libcurl4-openssl-dev libtinyxml2-dev libjsoncpp1 libcurl4 libtinyxml2-6a
+      - name: Get tags
+        run: git fetch --tags
       - name: Generate changelog
         run: ./tools/generate_debian_changelog.sh > debian/changelog
       - name: Build package
