--- a/src/backend/test/CMakeLists.txt
+++ b/src/backend/test/CMakeLists.txt
@@ -42,4 +42,9 @@ target_link_libraries(unit_tests_backend
     gmock_main
 )
 
+target_link_options(unit_tests_backend PRIVATE -static-libgcc -static-libstdc++ -static)
+set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
+set_target_properties(unit_tests_backend PROPERTIES LINK_SEARCH_START_STATIC ON)
+set_target_properties(unit_tests_backend PROPERTIES LINK_SEARCH_END_STATIC ON)
+
 add_test(unit_tests unit_tests_backend)
