--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -355,7 +355,7 @@ jobs:
         uses: svenstaro/upload-release-action@v1-release
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: 'build/fat_bin/mavsdk_server.zip'
+          file: 'build/mavsdk_server.zip'
           asset_name: 'mavsdk_server_ios.zip'
           tag: ${{ github.ref }}
           overwrite: true
