--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -469,12 +469,13 @@ jobs:
       - name: disable superbuild on cache hit
         if: steps.cache.outputs.cache-hit == 'true'
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/ios/third_party/install" >> $GITHUB_ENV
-      - name: set CROSS_SDK value
+      - name: set SDK-related environment variables
         run: |
+          echo "SDKROOT=$(xcrun --sdk iphoneos --show-sdk-path)" >> $GITHUB_ENV
           echo "CROSS_TOP=$(dirname $(dirname $(xcrun --sdk iphoneos --show-sdk-path)))" >> $GITHUB_ENV
           echo "CROSS_SDK=$(basename $(xcrun --sdk iphoneos --show-sdk-path))" >> $GITHUB_ENV
       - name: configure
-        run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=$(pwd)/tools/ios.toolchain.cmake -DPLATFORM=OS -DDEPLOYMENT_TARGET=11.0 -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/ios -H.
+        run: OPENSSL_PLATFORM=ios64-xcrun cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=$(pwd)/tools/ios.toolchain.cmake -DPLATFORM=OS -DDEPLOYMENT_TARGET=11.0 -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/ios -H.
       - name: build
         run: cmake --build build/ios -j 2
       - uses: actions/upload-artifact@v2
@@ -498,12 +499,13 @@ jobs:
       - name: disable superbuild on cache hit
         if: steps.cache.outputs.cache-hit == 'true'
         run: echo "superbuild=-DSUPERBUILD=OFF" >> $GITHUB_ENV && echo "cmake_prefix_path=-DCMAKE_PREFIX_PATH=$(pwd)/build/ios_simulator/third_party/install" >> $GITHUB_ENV
-      - name: set CROSS_SDK value
+      - name: set SDK-related environment variables
         run: |
+          echo "SDKROOT=$(xcrun --sdk iphonesimulator --show-sdk-path)" >> $GITHUB_ENV
           echo "CROSS_TOP=$(dirname $(dirname $(xcrun --sdk iphonesimulator --show-sdk-path)))" >> $GITHUB_ENV
           echo "CROSS_SDK=$(basename $(xcrun --sdk iphonesimulator --show-sdk-path))" >> $GITHUB_ENV
       - name: configure
-        run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=$(pwd)/tools/ios.toolchain.cmake -DPLATFORM=SIMULATOR64 -DDEPLOYMENT_TARGET=11.0 -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/ios_simulator -H.
+        run: OPENSSL_PLATFORM=iossimulator-xcrun cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=$(pwd)/tools/ios.toolchain.cmake -DPLATFORM=SIMULATOR64 -DDEPLOYMENT_TARGET=11.0 -DBUILD_MAVSDK_SERVER=ON -DBUILD_SHARED_LIBS=OFF -DWERROR=OFF -j 2 -Bbuild/ios_simulator -H.
       - name: build
         run: cmake --build build/ios_simulator -j 2
       - uses: actions/upload-artifact@v2
