--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
           submodules: recursive
       - name: install pymavlink dependencies
         run: sudo apt-get update && sudo apt-get install -y python3-future
+      - name: install stuff to debug
+        run: sudo apt-get install -y autoconf automake autotools-dev build-essential ca-certificates ccache cmake colordiff git libltdl-dev libtinyxml2-dev libtool libz-dev
       - name: configure
         run: cmake $superbuild $cmake_prefix_path -DCMAKE_BUILD_TYPE=Release -DBUILD_MAVSDK_SERVER=ON -DWERROR=OFF -Bbuild/release -H.
       - name: build
