refactor mavlink_param_value out of mavlink_parameters - I think this improves readability of the mavlink_parameters class (even after refactoring that out the mavlink_parameters.cpp file is 1.7K lines long) and also, for a independent server and client implementation of mavlink_parameters (which would also increase readability) this will be re-usable.

--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -24,6 +24,7 @@ target_sources(mavsdk
     mavlink_ftp.cpp
     mavlink_mission_transfer.cpp
     mavlink_parameters.cpp
+    mavlink_param_value.cpp
     mavlink_receiver.cpp
     mavlink_request_message_handler.cpp
     mavlink_statustext_handler.cpp
