set the flavour directly in cmake, so we don't need to manually build all the time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ set(DEPS_INSTALL_PATH "${DEPS_BUILD_PATH}/install" CACHE PATH "Install path for 
 
 include(GNUInstallDirs)
 
+set(MAVLINK_DIALECT openhd)
 if (NOT MAVLINK_DIALECT)
     set(MAVLINK_DIALECT common)
 endif()
