--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -263,6 +263,8 @@ jobs:
         run: |
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
           git config --global --add safe.directory /github/workspace
+      - name: install dependencies
+        run: yum -y install perl-IPC-Cmd perl-Pod-Html
       - name: configure
         run: cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_MAVSDK_SERVER=OFF -DBUILD_SHARED_LIBS=ON -DCMAKE_INSTALL_PREFIX=install -DWERROR=OFF  -Bbuild/release -H.
       - name: build
